--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha "
   },
   "author": "Diarmuid O Connor",
   "license": "ISC",
@@ -13,8 +13,11 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
+    "chai": "^4.0.2",
     "eslint": "^8.2.0",
-    "nodemon": "^2.0.15"
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.15",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
