--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node index.js",
-    "test": "mocha "
+    "test": "cross-env NODE_ENV=test mocha  "
   },
   "author": "Diarmuid O Connor",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.0.2",
+    "cross-env": "^6.0.3",
     "eslint": "^8.2.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.15",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "loglevel": "^1.7.1"
   }
 }
