--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -17,10 +17,14 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.2",
-    "mongoose": "^6.0.13"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.13",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0"
   }
 }
